# ChangeLog for games-engines/scummvm-tools
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-engines/scummvm-tools/ChangeLog,v 1.5 2004/09/03 23:00:04 slarti Exp $

  03 Sep 2004; Tom Martin <slarti@gentoo.org> scummvm-tools-0.6.1.ebuild:
  Marked ~amd64, resolves bug 62314. Thanks to Adrian Frühwirth
  <adrian.fruehwirth@gmx.at> for reporting.

*scummvm-tools-0.6.1 (29 Jul 2004)

  29 Jul 2004; Michael Sterrett <mr_bones_@gentoo.org>
  +scummvm-tools-0.6.1.ebuild:
  version bump

*scummvm-tools-0.6.0 (05 Apr 2004)

  05 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org>
  scummvm-tools-0.6.0.ebuild:
  version bump (bug #44826); now installed with ${PN} prefix so badly named
  utilities won't conflict with other packages

*scummvm-tools-0.5.0 (26 Sep 2003)

  26 Sep 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial ebuild #29167.