@@ -1,0 +1,1 @@
+MD5 eeebbd4e309a8564dd911d5c26fed2f0 scummvm-tools-0.7.0.tar.bz2 98664
