@@ -1,0 +1,29 @@
+# Copyright 1999-2004 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/games-engines/scummvm-tools/scummvm-tools-0.7.0.ebuild,v 1.1 2004/12/26 10:12:17 vapier Exp $
+
+inherit games
+
+DESCRIPTION="utilities for the SCUMM game engine"
+HOMEPAGE="http://scummvm.sourceforge.net/"
+SRC_URI="mirror://sourceforge/scummvm/${P}.tar.bz2"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="amd64 ppc x86"
+IUSE=""
+
+DEPEND="virtual/libc"
+
+src_compile() {
+	emake CFLAGS="${CFLAGS}" || die "emake failed"
+}
+
+src_install() {
+	local f
+	for f in $(find -type f -perm +1 -printf '%f ') ; do
+		newgamesbin $f ${PN}-$f || die "newgamesbin $f failed"
+	done
+	dodoc README
+	prepgamesdirs
+}
